remove redundant code, enhance some unit tests