@@ -17,7 +17,6 @@ public class LinearSymbolsCheckerTest {
         String[][] matrix = new String[0][0];
         Config.WinCombination combination = new Config.WinCombination();
         combination.setCoveredAreas(Collections.emptyList());
-        combination.setCount(0);
         List<String> result = checker.check(matrix, combination);
         assertEquals(Collections.emptyList(), result);
     }
@@ -27,7 +26,6 @@ public class LinearSymbolsCheckerTest {
         String[][] matrix = {{"A"}};
         Config.WinCombination combination = new Config.WinCombination();
         combination.setCoveredAreas(Collections.singletonList(Collections.singletonList("0:0")));
-        combination.setCount(1);
         List<String> result = checker.check(matrix, combination);
         assertEquals(Collections.singletonList("A"), result);
     }
@@ -35,15 +33,16 @@ public class LinearSymbolsCheckerTest {
     @Test
     public void testNoMatchingAreas() {
         String[][] matrix = {
-                {"A", "B"},
-                {"C", "D"}
+                {"A", "B", "C"},
+                {"D", "E", "F"},
+                {"G", "H", "I"}
         };
         Config.WinCombination combination = new Config.WinCombination();
         combination.setCoveredAreas(Arrays.asList(
-                Arrays.asList("0:0", "0:1"),
-                Arrays.asList("1:0", "1:1")
+                Arrays.asList("0:0", "0:1", "0:2"),
+                Arrays.asList("1:0", "1:1", "1:2"),
+                Arrays.asList("2:0", "2:1", "2:2")
         ));
-        combination.setCount(2);
         List<String> result = checker.check(matrix, combination);
         assertEquals(Collections.emptyList(), result);
     }
@@ -51,30 +50,31 @@ public class LinearSymbolsCheckerTest {
     @Test
     public void testSomeMatchingAreas() {
         String[][] matrix = {
-                {"A", "A"},
-                {"B", "B"}
+                {"A", "A", "A"},
+                {"B", "A", "C"},
+                {"A", "A", "B"}
         };
         Config.WinCombination combination = new Config.WinCombination();
         combination.setCoveredAreas(Arrays.asList(
-                Arrays.asList("0:0", "0:1"),
-                Arrays.asList("1:0", "1:1")
+                Arrays.asList("0:0", "0:1", "0:2"),
+                Arrays.asList("1:0", "1:1", "1:2"),
+                Arrays.asList("2:0", "2:1", "2:2")
         ));
-        combination.setCount(2);
         List<String> result = checker.check(matrix, combination);
-        assertEquals(Arrays.asList("A", "B"), result);
+        assertEquals(List.of("A"), result);
     }
 
     @Test
     public void testAllSymbolsMatchInArea() {
         String[][] matrix = {
-                {"A", "A"},
-                {"A", "A"}
+                {"A", "A", "A"},
+                {"A", "A", "A"},
+                {"A", "A", "A"}
         };
         Config.WinCombination combination = new Config.WinCombination();
         combination.setCoveredAreas(List.of(
-                Arrays.asList("0:0", "0:1", "1:0", "1:1")
+                Arrays.asList("0:0", "0:1", "0:2", "1:0", "1:1", "1:2", "2:0", "2:1", "2:2")
         ));
-        combination.setCount(4);
         List<String> result = checker.check(matrix, combination);
         assertEquals(Collections.singletonList("A"), result);
     }
@@ -82,14 +82,14 @@ public class LinearSymbolsCheckerTest {
     @Test
     public void testNoSymbolsMatchInArea() {
         String[][] matrix = {
-                {"A", "B"},
-                {"C", "D"}
+                {"A", "B", "C"},
+                {"D", "E", "F"},
+                {"G", "H", "I"}
         };
         Config.WinCombination combination = new Config.WinCombination();
         combination.setCoveredAreas(List.of(
-                Arrays.asList("0:0", "0:1", "1:0", "1:1")
+                Arrays.asList("0:0", "0:1", "0:2", "1:0", "1:1", "1:2", "2:0", "2:1", "2:2")
         ));
-        combination.setCount(4);
         List<String> result = checker.check(matrix, combination);
         assertEquals(Collections.emptyList(), result);
     }
